fix anchor links with specific z-indexing in background

--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -4,11 +4,14 @@
 .Background {
   position: absolute;
   background: var(--dark-navy);
-  height: calc(200vh + 110vw);
   min-height: 100%;
   overflow: hidden;
   width: 100%;
-  z-index: -3;
+
+  &__children {
+    z-index: 1;
+    position: relative;
+  }
 
   &__wire {
     z-index: -1;
